--- a/src/assets/stylesheets/_import.scss
+++ b/src/assets/stylesheets/_import.scss
@@ -10,3 +10,4 @@
 @import "../stylesheets/componentStyles/dashboardStyle/dashboard.scss";
 @import "../stylesheets/componentStyles/dashboardStyle/sites.scss";
 @import "../stylesheets/componentStyles/dashboardStyle/slice.scss";
+@import "../stylesheets/componentStyles/dashboardStyle/small-cells";
