--- a/src/app/Modules/dashboard/pages/slices/slices.component.scss
+++ b/src/app/Modules/dashboard/pages/slices/slices.component.scss
@@ -2,6 +2,7 @@
   overflow: visible;
   border-radius: 8px !important;
   margin-bottom: 50px;
+  box-shadow: none;
   .mat-expansion-panel-header > span {
     justify-content: space-between;
     overflow: visible;
@@ -14,7 +15,42 @@
     flex-grow: 1;
   }
 }
-
+.ctm_new_component {
+  .mat-action-row {
+    padding: 16px 24px 16px 24px;
+  }
+}
 .mat-action-row {
   border-top-width: 0px;
+}
+.mat-button-wrapper {
+  display: flex;
+}
+// .mat-tab-labels {
+//   .mat-tab-label {
+//   height: auto;
+//   width: 100%;
+//   padding: 10px 0 10px;
+//   opacity: .6;
+//   color: #97C1FF;
+//   }
+// }
+.accordion_pannel {
+  .mat-expansion-panel-header.mat-expanded {
+    height: 110px;
+  }
+}
+.accordion_pannel .alert_card_bx {
+  height: auto;
+}
+.parent-toggel {
+  .mat-button-toggle-group-appearance-standard .mat-button-toggle {
+    border-left: solid 1px rgba(0, 0, 0, 0.12);
+    padding: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    width: 40px;
+  }
 }
