static Data Integration (device-sim) and device Groups (partial)

--- a/src/app/components/header/navbar/navbar.component.html
+++ b/src/app/components/header/navbar/navbar.component.html
@@ -106,11 +106,11 @@
     <mat-icon>account_circle</mat-icon>
     <span>Admin</span>
   </button>
-  <button mat-menu-item>
+  <button routerLink="/device-sim" mat-menu-item>
     <mat-icon>sim_card</mat-icon>
     <span>Devices / Sim</span>
   </button>
-  <button mat-menu-item>
+  <button routerLink="/services" mat-menu-item>
     <mat-icon>layers</mat-icon>
     <span>Services</span>
   </button>
