--- a/src/assets/stylesheets/_import.scss
+++ b/src/assets/stylesheets/_import.scss
@@ -6,6 +6,7 @@
 @import "../stylesheets/componentStyles/select-sims.scss";
 @import "../stylesheets/componentStyles/select-devices.scss";
 @import "../stylesheets/componentStyles/services.scss";
+@import "../stylesheets/componentStyles/device-groups.scss";
 
 @import "../stylesheets/componentStyles/dashboardStyle/dashboard.scss";
 @import "../stylesheets/componentStyles/dashboardStyle/sites.scss";
