--- a/src/assets/stylesheets/componentStyles/device-sim.scss
+++ b/src/assets/stylesheets/componentStyles/device-sim.scss
@@ -128,9 +128,9 @@
           color: #ef233c;
         }
       }
-      .device-progress-bar {
-        height: 6px;
-      }
+      // .device-progress-bar {
+      //   height: 6px;
+      // }
       .connected {
         color: #ffffff !important;
         background: #06d6a0 !important;
@@ -279,14 +279,17 @@
     color: #000;
   }
   .activate-device-subtitle2-button {
+    width: 10rem;
     border: 1px solid #0063f7;
     border-radius: 4px;
     color: #0063f7;
     padding: 14px;
+
+    &-searchIcon {
+      margin-left: 3.75rem;
+    }
   }
-  // .activate-device-subtitle2-button-searchIcon {
-  //   margin-left: 3.75rem;
-  // }
+
   // .activate-device-subtitle2-inputField {
   //   width: 9.5rem;
   // }
@@ -514,6 +517,7 @@
 }
 
 .progress {
+  height: 1rem;
   background-color: #fff;
   border-radius: 22px;
   &-hours {
@@ -594,4 +598,17 @@
     height: 1rem;
     margin-left: 12rem;
   }
+}
+
+.dayChart {
+  // background-color: #0063f7 !important;
+  margin-top: -2rem;
+  rect {
+    rx: 10;
+    ry: 10;
+  }
+}
+
+.randClass {
+  background-color: red !important;
 }
