--- a/src/app/Modules/settings/dialogs/select-sims/select-sims.component.html
+++ b/src/app/Modules/settings/dialogs/select-sims/select-sims.component.html
@@ -40,7 +40,12 @@
   >
     Cancel
   </button>
-  <button mat-button class="select-sim-finalButtons-select" cdkFocusInitial (click)="selectSimFinal()">
+  <button
+    mat-button
+    class="select-sim-finalButtons-select"
+    cdkFocusInitial
+    (click)="selectSimFinal()"
+  >
     Select
   </button>
 </div>
