--- a/src/app/side-navbar/side-navbar.component.html
+++ b/src/app/side-navbar/side-navbar.component.html
@@ -4,15 +4,15 @@
   <mat-card-header class="my-2">
     <mat-form-field id="siteDropdown">
       <mat-label>site</mat-label>
-        <mat-select>
-          <mat-option
-            *ngFor="let site of sites; let siteIndex = index"
-            [value]="site['siteName']"
-            (click)="selectedSite(site['siteID'])"
-          >
-          {{ site['siteName'] }}
-          </mat-option>
-        </mat-select>
+      <mat-select>
+        <mat-option
+          *ngFor="let site of sites; let siteIndex = index"
+          [value]="site['siteName']"
+          (click)="selectedSite(site['siteID'])"
+        >
+          {{ site["siteName"] }}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
   </mat-card-header>
   <mat-card-header>
