10 jan login work start

--- a/src/app/Modules/dashboard/dashboard.component.html
+++ b/src/app/Modules/dashboard/dashboard.component.html
@@ -135,17 +135,7 @@
       <div *ngIf="isAcknowledged === 8" class="col-lg-4">
         <div class="site-visite-bx">
           <div class="section-h">
-            <h4>
-              Notification
-              <!-- <span>
-                <a *ngIf="isExpand" (click)="parentWillTakeForExpand()"
-                  >Expand All</a
-                >
-                <a *ngIf="!isExpand" (click)="parentWillTakeForExpand()"
-                  >Collapse</a
-                >
-              </span> -->
-            </h4>
+            <h4>Notification</h4>
           </div>
           <div class="section-tabs section_close">
             <p (click)="hideAcknowledgedView()">Close</p>
