device-groups static data integration (except add new devices and UI Issues)

--- a/src/app/Modules/settings/device-sim/device-sim.component.html
+++ b/src/app/Modules/settings/device-sim/device-sim.component.html
@@ -540,7 +540,7 @@
                 <mat-card-actions class="mat-card-actions d-flex">
                   <div
                     class="device-sim-item-delete d-flex mx-2"
-                    (click)="editTrigger(deviceIndex)"
+                    (click)="openDeleteDialog(deviceIndex);"
                   >
                     <div>
                       <img
