--- a/src/app/Modules/settings/dialogs/delete-devices/delete-devices.component.html
+++ b/src/app/Modules/settings/dialogs/delete-devices/delete-devices.component.html
@@ -1,5 +1,5 @@
 <div class="ctm-modal-content">
-  <mat-dialog-content class="mat-typography modal-header">
+  <mat-dialog-content class="mat-typography modal-header d-flex">
     <h5>Are you sure you want to remove the group?</h5>
     <img src="assets/AdminPanel/close.svg" mat-dialog-close />
   </mat-dialog-content>
