--- a/src/assets/stylesheets/_import.scss
+++ b/src/assets/stylesheets/_import.scss
@@ -12,3 +12,5 @@
 @import "../stylesheets/componentStyles/dashboardStyle/sites.scss";
 @import "../stylesheets/componentStyles/dashboardStyle/slice.scss";
 @import "../stylesheets/componentStyles/dashboardStyle/small-cells";
+
+@import "../../app/Modules/dashboard/pages/modal/modal.component.scss";
