--- a/src/app/Modules/settings/device-groups/device-groups.component.html
+++ b/src/app/Modules/settings/device-groups/device-groups.component.html
@@ -444,14 +444,14 @@
                             <mat-label class="form-label"
                               >Description
                             </mat-label>
-                            <textarea rows="6" cols="45"> </textarea>
+                            <textarea class="my-2" rows="6" cols="45"> </textarea>
                           </div>
                         </div>
                       </div>
                       <div class="remove-device-label mx-4">
                         Select Devices to remove form group
                       </div>
-                      <div class="my-2 mx-4 d-flex" >
+                      <div class="my-2 mx-4 d-flex flex-wrap" >
                         <div
                           class="device-group-items d-flex flex-wrap" *ngFor="
                           let devices of group.devices;
